[gd_scene load_steps=6 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/scripts/Feature_UIRayCast.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.004, 0.004, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="SphereMesh" id=3]
radius = 0.01
height = 0.02

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_fixed_size = true

[node name="Feature_UIRayCast" type="Spatial"]
script = ExtResource( 1 )

[node name="RayCastPosition" type="Spatial" parent="."]

[node name="RayCast" type="RayCast" parent="RayCastPosition"]
enabled = true
cast_to = Vector3( 0, -3, 0 )
collision_mask = 524288
collide_with_areas = true
collide_with_bodies = false

[node name="RayCastMesh" type="MeshInstance" parent="RayCastPosition"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="RayCastHitMarker" type="MeshInstance" parent="RayCastPosition"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
